main/default/objects/Opportunity/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>