main/default/objects/Opportunity/fields/Contact_last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_last_Name__c</fullName>
    <label>Contact last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>