main/default/objects/Opportunity/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <type>TextArea</type>
</CustomField>