main/default/objects/Opportunity/fields/Phone_Test__c.field-meta.xml
<CustomField>
    <fullName>Phone_Test__c</fullName>
    <label>Phone Test</label>
    <type>Phone</type>
</CustomField>